# dans-fastmcp-server-template

./: .env  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  TODO.md  create_todo.py  docker-compose.yml  ecosystem.config.js  pyproject.toml
src/PROJECT_NAME/: __main__.py
tests/: test_client_server.py  test_middleware.py  test_server.py  test_tools.py
