[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PROJECT_NAME"
version = "0.1.0"
description = "A FastMCP-based todo list server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "pymongo",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/PROJECT_NAME"]
